fix(tribelanding): remove scrollbar on IE

--- a/app/client/stylesheets/pages/tribestart/_tribestart-nav.scss
+++ b/app/client/stylesheets/pages/tribestart/_tribestart-nav.scss
@@ -21,7 +21,8 @@
 
     &__list {
         white-space: nowrap;
-        overflow-x: scroll;
+        overflow-x: auto;
+        -ms-overflow-style: none;
     }
 
     &__listitem {
